2007-02-22  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: Fixed some problems in last commit.

2007-02-21  Raul Mateos  <raulofpandora@gmail.com>

	* pandoradb.sql: Solved small problems that caused some tables not 
	to be created.
	
	* operation/active_console/lib/db_functions.php: Remove ".." in include
	path for config file.
	
	* general/logon_ok.php: Use new styles and small check to show
	some text if no data.
	
	* include/styles/pandora.css: New styles.

2007-02-20  Sancho Lerena  <slerena@artica.es>

    * pandoradb.sql: Upgraded SQL. Improved lenght for some fields.
	
	* index.php: Better permission checks
	
	* operation/agentes/estado_ultimopaquete.php: Changed some
	parameters for agent graphics.
	
	* operation/agentes/estado_generalagente.php: Changed some
	parameters for agent graphics.
	
	* reporting/fgraph.php: MAJOR UPGRADE. Replacement for three main
	graphics from agents now using Image Graph.
	
	* reporting/stat_win.php: MAJOR UPGRADE.


2007-02-19  Sancho Leren   <slerena@openideas.info>

	* include/styles/pandora.css: Updated to have new styles for
	installer.
	
	* include/config.inc.php: New skeleton for config, used in wizard.

	* install.php: NEW wizar/installer for console.
	
	* index.php: Some modifications for main page.

	* operation/incidents/incide*: Some header changes.
	
	* operation/active_console/index.php: Header changes.
	
	* images/*: New images for wizard.

	* general/error_*.php: New messages for wizard.
	
2007-02-19  Sancho Lerena  <slerena@openideas.info>

	* operation/incidents/incident.php: Pagination finished.

	* operation/events/events.php: Pagination finished.

	* godmode/admin_access_logs.php: Pagination fix (work in progress,
	not finished yet).

2007-02-16  Sancho Lerena  <slerena@artica.es>

	* pandoradb.sql: added unixtime field to tagente_datos,
	tagente_datos_string and tagente_estado tables. Future queries
	will use UNIX time instead of "Human" timestamp strings.
	