@@ -592,17 +592,16 @@ function give_agentmodule_flag($id_agent_module){
 // Returns a combo with the groups and defines an array 
 // to put all groups with Agent Read permission
 // ----------------------------------------------------------------------
-
 function list_group ($id_user){
-	$mis_grupos[]=""; // Define array mis_grupos to put here all groups with Agent Read permission
+	$mis_grupos=array (); // Define array mis_grupos to put here all groups with Agent Read permission
 	$sql='SELECT id_grupo FROM tgrupo';
 	$result=mysql_query($sql);
 	while ($row=mysql_fetch_array($result)){
 		if ($row["id_grupo"] != 1){
 			if (give_acl($id_user,$row["id_grupo"], "AR") == 1){
+				array_push ($mis_grupos, $row["id_grupo"]); //Put in  an array all the groups the user belongs
 				echo "<option value='".$row["id_grupo"]."'>".
 				dame_nombre_grupo($row["id_grupo"])."</option>";
-				$mis_grupos[]=$row["id_grupo"]; //Put in  an array all the groups the user belongs
 			}
 		}
 	}
