@@ -1,3 +1,8 @@
+2007-02-22  Esteban Sanchez  <estebans@artica.es>
+
+	* pandoradb.sql: Changed a 'utimestamp' field from mediumint to
+	integer.
+
 2007-02-22  Sancho Lerena  <slerena@artica.es>
 
 	* pandoradb.sql: Fixed some problems in last commit.
